[gd_scene load_steps=5 format=3 uid="uid://ci623np0twgr4"]

[ext_resource type="PackedScene" uid="uid://d34udydjwtjb5" path="res://Scenes/Menus/rebind_control.tscn" id="1_3os5v"]
[ext_resource type="Script" uid="uid://dfcptatypsvfk" path="res://Scripts/Menus/controles.gd" id="1_amvpp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_amvpp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g4yem"]

[node name="Controles" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_amvpp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_amvpp")

[node name="Rebind_control" parent="MarginContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource("1_3os5v")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Rebind_control2")
action_name = "mover_derecha_2"

[node name="Rebind_control2" parent="MarginContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource("1_3os5v")]
layout_mode = 2
focus_neighbor_top = NodePath("../Rebind_control")
focus_neighbor_bottom = NodePath("../Rebind_control3")
action_name = "saltar_1"

[node name="Rebind_control3" parent="MarginContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource("1_3os5v")]
layout_mode = 2
focus_neighbor_top = NodePath("../Rebind_control2")
focus_neighbor_bottom = NodePath("../Rebind_control4")
action_name = "mover_izquierda_1"

[node name="Rebind_control4" parent="MarginContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource("1_3os5v")]
layout_mode = 2
focus_neighbor_top = NodePath("../Rebind_control3")
focus_neighbor_bottom = NodePath("../../../Volver al menu")
action_name = "trepar_1"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_g4yem")

[node name="Volver al menu" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_top = NodePath("../ScrollContainer/VBoxContainer/Rebind_control4")
text = "Atr√°s"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Volver al menu" to="." method="_on_volver_al_menu_pressed"]
